clusters/9ka/pdns-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdns-admin
  labels:
    app.kubernetes.io/name: pdns-admin
    app.kubernetes.io/instance: pdns-admin
    app.kubernetes.io/version: 0.4.2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pdns-admin
      app.kubernetes.io/instance: pdns-admin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pdns-admin
        app.kubernetes.io/instance: pdns-admin
    spec:
      containers:
      - name: pdns-admin
        image: powerdnsadmin/pda-legacy:v0.6.1
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: pda-data
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 12
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 400Mi
      volumes:
      - name: pda-data
        persistentVolumeClaim:
          claimName: pda-data
