clusters/9ka/pdns-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdns-admin
  labels:
    app.kubernetes.io/name: pdns-admin
    app.kubernetes.io/instance: pdns-admin
  namespace: pdns-admin
spec:
  selector:
    app.kubernetes.io/name: pdns-admin
    app.kubernetes.io/instance: pdns-admin
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
