clusters/9ka/pdns-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdns-admin
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: pda.9ka.nl
    external-dns.alpha.kubernetes.io/target: 431113a6-4cf3-4a66-9750-17113ae2e689.cfargotunnel.com
  labels:
    app.kubernetes.io/name: pdns-admin
    app.kubernetes.io/instance: pdns-admin-efgh
spec:
  ingressClassName: cilium
  rules:
  - host: pda.9ka.nl
    http:
      paths:
      - backend:
          service:
            name: pdns-admin
            port:
              name: http
        path: /
        pathType: Prefix
